--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ ansi_term = "0.10"
 atty = "0.2"
 clap = "2.27"
 log = "0.3"
-loggerv = "0.5"
+loggerv = { git = "https://github.com/clux/loggerv.git" }
 mustache = "0.8"
